--- a/about.html
+++ b/about.html
@@ -33,12 +33,12 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/index.html"
+              <a class="nav-link" aria-current="page" href="/pigfarm/index.html"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/about.html">About</a>
+              <a class="nav-link active" href="/pigfarm/about.html">About</a>
             </li>
 
             <li class="nav-item dropdown">
@@ -65,7 +65,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contact Us</a>
+              <a class="nav-link" href="/pigfarm/contact.html">Contact Us</a>
             </li>
           </ul>
           <form class="d-flex">
