--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html">Pig Farm</a>
+        <a class="navbar-brand" href="/pigfarm/index.html">Pig Farm</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -38,7 +38,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About</a>
+              <a class="nav-link" href="/pigfarm/about.html">About</a>
             </li>
 
             <li class="nav-item dropdown">
@@ -65,7 +65,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link active" href="/contact.html">Contact Us</a>
+              <a class="nav-link active" href="/pigfarm/contact.html">Contact Us</a>
             </li>
           </ul>
           <form class="d-flex">
