--- a/contact.html
+++ b/contact.html
@@ -87,12 +87,12 @@
       <form class="row g-3">
         <div class="col-md-6">
           <label for="firstName" class="form-label">First Name</label>
-          <input type="email" class="form-control" id="firstName" />
+          <input type="input" class="form-control" id="firstName" />
         </div>
 
         <div class="col-md-6">
           <label for="lastName" class="form-label">Last Name</label>
-          <input type="email" class="form-control" id="lastName" />
+          <input type="input" class="form-control" id="lastName" />
         </div>
 
         <div class="col-md-12">
