--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html">Pig Farm</a>
+        <a class="navbar-brand" href="/pigfarm/index.html">Pig Farm</a>
         <button
           class="navbar-toggler"
           type="button"
